--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Sunnyside agency landing page</title>
+  <script  src="https://kit.fontawesome.com/d872d3de7f.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -34,6 +35,7 @@
       <p>  We are a full-service creative agency specializing in helping brands grow fast. 
         Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <a href=""> Learn more</a>
+        <hr>
       </div>
       
     </div>
@@ -44,6 +46,7 @@
         <h2>Stand out to the right audience</h2>
         <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
         <a href="">Learn more</a>
+        <hr>
       </div>
      
     </div>
@@ -102,10 +105,10 @@
     <li> <a href="" class="footer-link">Projects</a></li>
   </ul>
   <div class="icons">
-    <img src="/images/icon-instagram.svg" alt="">
-    <img src="./images/icon-pinterest.svg" alt="">
-    <img src="./images/icon-facebook.svg" alt="">
-    <img src="./images/icon-twitter.svg" alt="">
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-pinterest"></i>
+<i class="fa-brands fa-facebook-square"></i>
+<i class="fa-brands fa-twitter"></i>
   </div>
 </footer>
   <!-- About 
