nav links to page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="nav-items">
         <ul>
           <li > <a href="" class="nav-links">About </a> </li>
-          <li ><a href="" class="nav-links">Services </a></li>
-          <li >  <a href="" class="nav-links">Projects</a></li>
-         <li ><a href="" class="nav-links active">Contact </a></li>
+          <li ><a href="#services" class="nav-links">Services </a></li>
+          <li >  <a href="#testimonial" class="nav-links">Projects</a></li>
+         <li ><a href="#contact" class="nav-links active">Contact </a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +29,7 @@
     <div class="arrow"><img src="./images/icon-arrow-down.svg"  /></div>
   </header>
   <!-- main  -->
-  <main class="main-unit">
+  <main class="main-unit" id="services">
     <div class="transform-unit">
       <div>
         <h2> Transform your brand</h2>
@@ -68,7 +68,7 @@
   </main>
 
 <!-- testimonial section -->
-<section>
+<section id="testimonial">
   <h2>  Client testimonials</h2>
   <div class="testimonial-container">
     <div class="client">
@@ -98,7 +98,7 @@
 <div class="gallery"></div>
 <div class="gallery"></div>
 </aside>
-<footer>
+<footer id="contact">
   <img src="./images/logo.svg" />
 
   <ul>
