--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <header id="home">
     <nav>
       <img src="./images/icon-hamburger.svg" class="hambuger-icon" id="toggle"/>
       <img src="./images/logo.svg" />
       <div class="nav-items">
         <ul>
-          <li > <a href="" class="nav-links">About </a> </li>
+          <li > <a href="#home" class="nav-links">About </a> </li>
           <li ><a href="#services" class="nav-links">Services </a></li>
           <li >  <a href="#testimonial" class="nav-links">Projects</a></li>
          <li ><a href="#contact" class="nav-links active">Contact </a></li>
@@ -26,7 +26,7 @@
       </div>
     </nav>
     <h2>   We are creatives</h2>
-    <div class="arrow"><img src="./images/icon-arrow-down.svg"  /></div>
+    <div class="arrow"> <a href="#services"><img src="./images/icon-arrow-down.svg"  /></a></div>
   </header>
   <!-- main  -->
   <main class="main-unit" id="services">
